--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "seed": "ts-node src/seedHospitals.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -16,13 +17,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.7.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
